<resources>
    <string name="app_name">Marvel App</string>
    <string name="title_home">Home</string>
    <string name="title_comic">Comic</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="series">Series</string>
    <string name="stories">Stories</string>
    <string name="character">Character</string>
    <string name="event">Event</string>
    <string name="creator">Creator</string>
    <string name="search">Search</string>
    <string name="text_search">Search</string>
    <string name="text_choose_year">Choose year</string>
    <string name="text_set">Set</string>
    <string name="text_cancel">Cancel</string>
    <string name="hint_search">hint search</string>
    <string name="text_modified">text modified</string>
</resources>
