<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_250"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:paddingBottom="@dimen/dp_36">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_50"
        android:background=""
        android:gravity="center"
        android:text="@string/text_search"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_choose_year"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:autofillHints="hint search"
        android:hint="@string/hint_search"
        android:inputType="number"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <TextView
        android:id="@+id/text_choose_year"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/text_choose_year"
        android:textColor="@color/color_black"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_choose_year" />

    <NumberPicker
        android:id="@+id/number_picker_year"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_choose_year" />

    <Button
        android:id="@+id/btn_set"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/bg_red"
        android:text="@string/text_set"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_picker_year" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/bg_red"
        android:text="@string/text_cancel"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_set"
        app:layout_constraintTop_toBottomOf="@+id/number_picker_year" />
</androidx.constraintlayout.widget.ConstraintLayout>
